--- a/css/styles.css
+++ b/css/styles.css
@@ -572,6 +572,7 @@ body {
 }
 .footer-form {
   gap: 24px;
+  display: flex;
 }
 .footer-subscribe-input {
   width: 264px;
@@ -580,7 +581,7 @@ body {
   background-color: transparent;
   font-size: 12px;
   line-height: 2;
-  letter-spacing: 0.04;
+  letter-spacing: 0.04em;
   padding-left: 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
