--- a/css/styles.css
+++ b/css/styles.css
@@ -596,7 +596,7 @@ input::placeholder {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -617,8 +617,9 @@ input::placeholder {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-window {
   position: absolute;
@@ -638,6 +639,7 @@ input::placeholder {
   top: 24px;
   right: 24px;
   width: 24px;
+  height: 24px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -687,6 +689,8 @@ input::placeholder {
 }
 .modal-form-window-form-label-name-input-div {
   position: relative;
+  border-color: #4d5ae5;
+  margin-bottom: 16px;
 }
 .modal-form-window-form-label-name-input {
   width: 100%;
@@ -700,6 +704,10 @@ input::placeholder {
 }
 .modal-form-window-form-label-name-input:hover {
   border-color: #4d5ae5;
+}
+.modal-form-window-form-label-name-input:focus
+  .modal-form-window-form-label-name-input-svg:hover {
+  fill: #4d5ae5;
 }
 .modal-form-window-form-label-name-input-svg {
   position: absolute;
