--- a/css/styles.css
+++ b/css/styles.css
@@ -767,6 +767,19 @@ input::placeholder {
   background-color: #404bbf;
   fill: #f4f4fd;
 }
+.Privacy-Policy {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
 .modal-form-window-form-label-name-input-a {
   color: #4d5ae5;
 }
