--- a/css/styles.css
+++ b/css/styles.css
@@ -617,7 +617,6 @@ input::placeholder {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms
     cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -803,4 +802,7 @@ input::placeholder {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: 100px;
   border-radius: 4px;
+}
+.modal-form-window-form-user-privacy {
+  margin-bottom: 24px;
 }
