--- a/css/styles.css
+++ b/css/styles.css
@@ -706,12 +706,12 @@ input::placeholder {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-window-form-label-name-input:hover
-  .modal-form-window-form-label-name-input:focus {
+.modal-form-window-form-label-name-input:hover,
+.modal-form-window-form-label-name-input:focus {
   border-color: #4d5ae5;
 }
 .modal-form-window-form-label-name-input:focus
-  .modal-form-window-form-label-name-input-svg:hover {
+  .modal-form-window-form-label-name-input-svg {
   fill: #4d5ae5;
 }
 .modal-form-window-form-label-name-input-svg {
@@ -764,7 +764,9 @@ input::placeholder {
   fill: transparent;
 }
 
-.modal-form-window-form-label-name-input-checkbox:checked + .Privacy-Policy {
+.modal-form-window-form-label-name-input-checkbox:checked
+  + .privacy-policy
+  .modal-form-window-form-label-name-input-checkbox-svg {
   background-color: #404bbf;
   fill: #f4f4fd;
   border: none;
