--- a/css/styles.css
+++ b/css/styles.css
@@ -771,7 +771,7 @@ input::placeholder {
   fill: #f4f4fd;
   border: none;
 }
-.Privacy-Policy {
+.privacy-policy {
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
