--- a/css/styles.css
+++ b/css/styles.css
@@ -710,7 +710,7 @@ input::placeholder {
 .modal-form-window-form-label-name-input:focus {
   border-color: #4d5ae5;
 }
-.modal-form-window-form-label-name-input:hover
+.modal-form-window-form-label-name-input:focus
   .modal-form-window-form-label-name-input-svg {
   fill: #4d5ae5;
 }
@@ -720,7 +720,6 @@ input::placeholder {
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: none;
 }
 .modal-form-window-form-label-name-input-textarea {
   width: 100%;
