--- a/css/styles.css
+++ b/css/styles.css
@@ -767,7 +767,7 @@ input::placeholder {
   + .privacy-policy
   .modal-form-window-form-label-name-input-checkbox-svg {
   background-color: #404bbf;
-
+  fill: #4d5ae5;
   border: none;
 }
 .privacy-policy {
