--- a/css/styles.css
+++ b/css/styles.css
@@ -753,7 +753,7 @@ input::placeholder {
   + .modal-form-window-form-label-name-input-checkbox-accept-text
   .privacy-policy {
   background-color: #404bbf;
-  fill: #4d5ae5;
+  fill: #f4f4fd;
   border: none;
 }
 .privacy-policy {
